# ArXivist

./: .gitignore  cli.py  pyproject.toml
arxivist/: config.py
arxivist/application/: services.py
arxivist/application/ports/: arxiv_client.py  arxiv_extractor.py  arxiv_fetcher.py  arxiv_paper_extractor.py  embedding_model.py  paper_fetcher.py  repositories.py  repository.py  rss_client.py  rss_fetcher.py  unit_of_work.py  vector_repository.py
arxivist/domain/: __init__.py  model.py  paper.py
arxivist/infrastructure/: arxiv_extractor.py  arxiv_rss_client.py  arxiv_rss_fetcher.py  arxiv_rss_paper_extractor.py  embedding_model.py  exceptions.py  feedparser_rss_fetcher.py  milvus_vector_repository.py  openai_embedding_model.py  orm.py  repositories.py  repository.py  sql_alchemy_orm.py  sql_alchemy_repository.py  sql_alchemy_unit_of_work.py  unit_of_work.py
arxivist/infrastructure/persistence/: orm.py  repository.py  unit_of_work.py  vector_repository.py
tests/: conftest.py
tests/application/: test_services.py
tests/domain/: test_model.py  test_paper.py
tests/infrastructure/: test_arxiv_extractor.py  test_arxiv_rss_fetcher.py  test_arxiv_rss_paper_extractor.py  test_embedding_model.py  test_feedparser_rss_client.py  test_feedparser_rss_fetcher.py  test_milvus_vector_repository.py  test_openai_embedding_model.py  test_repository.py  test_sql_alchemy_repository.py  test_sql_alchemy_unit_of_work.py  test_unit_of_work.py
tests/infrastructure/persistence/: test_repository.py  test_unit_of_work.py  test_vector_repository.py
(+3 files in other folders)
