[project]
name = "arxivist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "faiss-cpu>=1.10.0",
    "feedparser>=6.0.11",
    "openai>=1.66.3",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.39",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
