[project]
name = "arxivist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "faiss-cpu>=1.10.0",
    "feedparser>=6.0.11",
    "openai>=1.66.3",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.39",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
show-fixes = true
preview = true

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
    "D100",
    "D104",
    "CPY",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D101", "D103", "D102", "PLR6301", "PLR2004"]

[tool.ruff.format]
preview = true
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"
